deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: httpd-24
  labels:
    app: httpd-24
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd-24
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: httpd-24
        deploymentconfig: httpd-24
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
    spec:
      containers:
        - name: httpd-24
          image: >-
            image-registry.openshift-image-registry.svc:5000/temp/httpd-24@sha256:33af8e8197ae9ef427c9e110fb69028356333731936deda4fabca918322db202
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
