route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: httpd-24
spec:
  to:
    kind: Service
    name: httpd-24
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
